--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -7,8 +7,8 @@
 */
     z-index:100;
 }
-.mod-pedal > div:first-child { 
-    box-shadow: 5px 15px 40px rgba(0, 0, 0, 0.66), 0px 2px 5px black;
+#pedalboard-dashboard > .mod-pedal > div:first-child { 
+    box-shadow: 8px 24px 50px rgba(0, 0, 0, 0.66), 5px 15px 30px rgba(0, 0, 0, 0.9), 0px 2px 5px black;
 }
 .mod-input .mod-output-jack{
     z-index: 100;
