Continue, seems to be working

--- a/html/include/plugin_info.html
+++ b/html/include/plugin_info.html
@@ -37,9 +37,9 @@
 			{{#ports.control.input}}
                         <tr>
                           <td>{{name}}</td>
-                          <td>{{default}}</td>
-                          <td>{{minimum}}</td>
-                          <td>{{maximum}}</td>
+                          <td>{{ranges.default}}</td>
+                          <td>{{ranges.minimum}}</td>
+                          <td>{{ranges.maximum}}</td>
                         </tr>
 			{{/ports.control.input}}
                       </table>
