Update default modgui from sdk

--- a/html/resources/pedals/default.css
+++ b/html/resources/pedals/default.css
@@ -1,7 +1,7 @@
 /* = CONTAINER
 ================================================ */
 .mod-pedal-default {
-    background-image:url(default.png);
+    background-image:url(/resources/pedals/default.png);
     background-position:center center;
     background-repeat:no-repeat;
     background-size:251px 434px;
@@ -26,25 +26,34 @@
 ================================================ */
 
 .mod-pedal-default .mod-pedal-input {
+/*
     left: -28px;
     top: 110px;
+*/
 }
 .mod-pedal-default .mod-pedal-output {
+/*
     right: -24px;
     top: 110px;
+*/
 }
 
 /* = FOOTSWITCH
 ================================================ */
 .mod-pedal-default .mod-footswitch {
-    background-image:url(footswitch.png);
-    background-position:center center;
+    background-image:url(/resources/pedals/footswitch.png);
+    background-position:bottom center;
     background-repeat:no-repeat;
-    background-size:auto 65px;
+    background-size:auto 132px;
     bottom: 100px;
     cursor:pointer;
     height:66px;
+    width: 66px;
     left:13px;
-    position:absolute;
+    margin: auto;
+    position:absolute !important;
     right:13px;
+}
+.mod-pedal-default .mod-footswitch.on {
+    background-position-y: top !important
 }
