--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -6,7 +6,7 @@
                 <div class="span3 screenshot">
                     <img src="{{screenshot_href}}">
                 </div>
-                
+
                 <div class="span9">
                     <header>
                         <h1>{{label}}</h1>
@@ -21,7 +21,7 @@
                             <button class="js-remove btn btn-danger btn-mini hidden">Remove</button>
                         </p>
                     </header>
-                    <p><a href="http://wiki.portalmod.com/wiki/Plugins/{{package_name}}" target="_blank">More info at <b>{{package_name}}</b>'s wiki page</a></p>
+                    <p><a href="http://wiki.moddevices.com/wiki/Plugins/{{package_name}}" target="_blank">More info at <b>{{package_name}}</b>'s wiki page</a></p>
             </div>
         </div>
     </div>
