--- a/html/include/plugin_info.html
+++ b/html/include/plugin_info.html
@@ -26,7 +26,7 @@
 		      <p>
 			{{{description}}}
 		      </p>
-                      <p><a href="http://wiki.portalmod.com/wiki/Plugins/{{package_name}}" target="_blank">More info at <b>{{package_name}}</b>'s wiki page</a></p>
+                      <p><a href="http://wiki.moddevices.com/wiki/Plugins/{{package_name}}" target="_blank">More info at <b>{{package_name}}</b>'s wiki page</a></p>
                       <table class="plugin-specs table table-bordered">
                         <tr>
                           <th>control</th>
