removes utf8 characters and uses html code

--- a/html/include/cloud_feed.html
+++ b/html/include/cloud_feed.html
@@ -71,7 +71,7 @@
 		<button class="pedalboard-load btn btn-primary js-pedalboard-{{id}}">Try</button>
                 <!--<div class="description">{{description}}</div>-->
                 <div class="actions">
-                  <!-- <a href="">Like</a> • <a href="">Comment</a> -->
+                  <!-- <a href="">Like</a> &bull; <a href="">Comment</a> -->
                 </div>
                 <div class="js-template" data-template-name="comments"></div>
             </div>
