--- a/html/include/notification.html
+++ b/html/include/notification.html
@@ -1,5 +1,5 @@
 <section class="notifications notifications-{{type}} alert alert-{{type}}">
-    <button type="button" class="js-close close">×</button>
+    <button type="button" class="js-close close">&times;</button>
     <div class="explanation js-message">{{message}}</div>
     <div class="progressbar js-progressbar"></div>
 </section>
