Cleanup for latest lilvlib

--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -4,7 +4,7 @@
     </div>
     <div class="description">
         <span class="title">{{label}}</span>
-        <span class="author">{{author}}</span>
+        <span class="author">{{brand}}</span>
         <span class="status {{status}}"></span>
     </div>
     <!--
