--- a/html/include/plugin.html
+++ b/html/include/plugin.html
@@ -3,7 +3,7 @@
         <img src="{{source}}/effect/image/thumbnail.png?uri={{uri}}">
     </div>
     <span class="title">{{label}}</span>
-    <span class="author">{{author}}</span>
+    <span class="author">{{brand}}</span>
     <span class="status {{status}}"></span>
     <!--
     <span class="rating four"></span>
