new, more generic elements:   * modButton: button with label and icon, capable of inline confirmation   * modIcon: simple icon element

--- a/html/include/preset.html
+++ b/html/include/preset.html
@@ -1,4 +1,5 @@
-<div class=preset-manager-preset-title></div>
-<div class=preset-manager-preset-bindstate></div>
-<div class='preset-manager-button preset-manager-bind'></div>
-<div class='preset-manager-button preset-manager-clear'></div>
+<input type="text" class="preset-manager-preset-entry"></input>
+<div class="preset-manager-preset-bindstate"></div>
+<div class="mod-button mod-button-bind"></div>
+<div class="mod-button mod-button-clear"></div>
+<div class="mod-button mod-button-edit"></div>
