--- a/html/include/presets.html
+++ b/html/include/presets.html
@@ -1,5 +1,7 @@
-<input type=text class=preset-manager-entry></input>
-<div class='preset-manager-load preset-manager-button'>load</div>
-<div class='preset-manager-save preset-manager-button'>save</div>
-<div class='preset-manager-bind preset-manager-button'>bind</div>
-<ul class=preset-manager-list></ul>
+<input type="text" class="preset-manager-entry"></input>
+<div class="preset-manager-bind mod-button-bind mod-button">bind</div>
+<div class="mod-button-bar">
+    <div class="mod-button-load mod-button">load</div>
+    <div class="mod-button-save mod-button">save</div>
+</div>
+<ul class="mod-list"></ul>
