CSS icons class with makefile for generating black and white versions together with dynamic icons.css More on preset manager

--- a/html/include/preset.html
+++ b/html/include/preset.html
@@ -1,5 +1,5 @@
 <input type="text" class="preset-manager-preset-entry"></input>
 <div class="preset-manager-preset-bindstate"></div>
 <div class="mod-button mod-button-bind"></div>
-<div class="mod-button mod-button-clear"></div>
+<div class="mod-button mod-button-remove"></div>
 <div class="mod-button mod-button-edit"></div>
