--- a/html/include/presets.html
+++ b/html/include/presets.html
@@ -4,4 +4,4 @@
     <div class="mod-button-load mod-button">load</div>
     <div class="mod-button-save mod-button">save</div>
 </div>
-<ul class="mod-list"></ul>
+<ul class="mod-list mod-light"></ul>
