--- a/html/include/presets.html
+++ b/html/include/presets.html
@@ -1,7 +1,9 @@
-<input type="text" class="preset-manager-entry"></input>
 <div class="preset-manager-bind mod-button-bind mod-button"></div>
-<div class="mod-button-bar">
-    <div class="mod-button-load mod-button"></div>
-    <div class="mod-button-save mod-button"></div>
+<input type="text" class="preset-manager-entry"></input>
+<div class="preset-manager-container">
+    <div class="mod-button-bar">
+        <div class="mod-button-load mod-button"></div>
+        <div class="mod-button-save mod-button"></div>
+    </div>
+    <ul class="mod-list mod-light"></ul>
 </div>
-<ul class="mod-list mod-light"></ul>
