--- a/html/include/plugin.html
+++ b/html/include/plugin.html
@@ -1,6 +1,6 @@
 <div class="plugin available-plugin js-available-effect" mod-role="available-plugin" mod-plugin-id="{{_id}}">
     <div class="thumb">
-        <img src="{{source}}/effect/image/thumbnail.png?uri={{uri}}">
+        <img src="{{thumbnail_href}}">
     </div>
     <span class="title">{{label}}</span>
     <span class="author">{{brand}}</span>
