--- a/html/include/cloud_feed.html
+++ b/html/include/cloud_feed.html
@@ -51,6 +51,14 @@
                             <span>{{connections_count}}</span>
                         </div>
                     </div>
+                    <div class="spec clearfix">
+                        <!-- FIXME needs proper icon -->
+                        <img src="img/cloud/icn-techspecs-rotary.png"/>
+                        <div class="number clearfix">
+                            <div class="arrow-left"></div>
+                            <span>{{plugin_count}}</span>
+                        </div>
+                    </div>
                     <!--
                     <div class="spec clearfix">
                         <img src="img/cloud/icn-techspecs-footswitch.png"/>
