--- a/html/include/preset.html
+++ b/html/include/preset.html
@@ -1,4 +1,5 @@
 <div class="preset-manager-preset-name"></div>
-<div class="mod-button mod-button-remove"></div>
+<input type="text" class="preset-manager-preset-entry"></input>
 <div class="mod-button mod-button-edit"></div>
+<div class="mod-button mod-button-remove"></div>
 <div class="mod-button mod-button-bind"></div>
