--- a/html/css/social.css
+++ b/html/css/social.css
@@ -80,6 +80,7 @@
     border-left:1px solid #222;
     border-right:1px solid #222;
 }
+#mod-social-network-header .menu ul li.feed,
 #mod-social-network-header .menu ul li.logout {
     display: none;
 }
