Hide plugin review and rating, not supported yet

--- a/html/include/plugin_info.html
+++ b/html/include/plugin_info.html
@@ -11,6 +11,7 @@
                     <header>
                         <h1>{{title}}{{#subtitle}} - <span>{{subtitle}}</span>{{/subtitle}}</h1>
 			<p>{{category.0}}</p>
+			<!--
                         <p><span class="rating-label">Rating:</span> <span class="rating"></span></p>
                         <p class="version">
                             <span class="js-latest-version">Latest Version: <span class="bold">{{latest_version}}</span></span>
@@ -21,12 +22,13 @@
                             <button class="js-upgrade btn btn-info btn-mini hidden">Upgrade</button>
                             <button class="js-remove btn btn-danger btn-mini hidden">Remove</button>
                         </p>
+                        -->
                     </header>
                     <section class="content clearfix">
 		      <p>
-			{{{description}}}
+			{{{comment}}}
 		      </p>
-                      <p><a href="http://wiki.moddevices.com/wiki/Plugins/{{package_name}}" target="_blank">More info at <b>{{package_name}}</b>'s wiki page</a></p>
+                      <!--<p><a href="http://wiki.moddevices.com/wiki/Plugins/{{package_name}}" target="_blank">More info at <b>{{package_name}}</b>'s wiki page</a></p>-->
                       <table class="plugin-specs table table-bordered">
                         <tr>
                           <th>control</th>
@@ -45,6 +47,7 @@
                       </table>
                     </section>
                 </div>
+		  <!--
                 <section class="comments-reviews clear">
 		  <section class="reviews">
 		    <h1>Reviews</h1>
@@ -60,6 +63,7 @@
 			</span>
 		      </h1>
 		    </article>
+		    -->
 		    <!--
 			 <article class="review current-version">
 			   <h1>Average rating for the current version: <span class="rating five"></span> <span class="rating-label">26 Ratings</span></h1>
@@ -122,11 +126,13 @@
 			   </div>
 			 </article>
 			 -->
+		  <!--
 		  </section>
 
 		  <section class="comments">
 		  </section>
                 </section>
+		  -->
             </div>
         </div>
     </div>
